# rims-code.github.io

./: .gitignore  404.html  =3.0.0.dev3  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: generate_website_pr.yaml  keep_alive.yml  rebuild_whole_website.yaml  submit_scheme_via_issue.yaml
about/contribute/: index.html
about/maintainers/: index.html
about/maintainers_manual/: index.html
assets/javascripts/: bundle.081f42fc.min.js
contribute/: index.html
crystal-calculator/: index.html
db/: ac-001.json  ac-002.json  ag-001.json  ag-002.json  ag-003.json  al-001.json  al-002.json  am-001.json  at-001.json  au-001.json  au-002.json  ba-001.json  ba-002.json  be-001.json  be-002.json  be-003.json  be-004.json  bi-001.json  ca-001.json  ca-002.json  ca-003.json  cd-001.json  cf-001.json  cm-001.json  co-001.json  co-002.json  co-003.json  co-004.json  cr-001.json  cr-002.json  cr-003.json  cu-001.json  cu-002.json  dy-001.json  dy-002.json  dy-003.json  dy-004.json  dy-005.json  dy-006.json  er-001.json  (+105 more)
docs/: contribute.md  crystal-calculator.md  index.md  maintainers_manual.md  schemes.md  submit_scheme.md
docs/about/: contribute.md  maintainers.md  maintainers_manual.md
docs/schemes/: schemes.md
docs/schemes_static/: info.md  submit_scheme.md
docs/tools/: rimsschemedrawer.md
docs/w/: index.md  w-1.md
maintenance/: README.md
schemes/: index.html
scripts/: cern_dbj_converter.py  scheme_submission_handler.py
search/: search_index.json
tests/: test_element.py  test_elements_md.py  test_schemes_md.py
(+467 files in other folders)
