[project]
name = "rimscode-website"
version = "0.1.0"
description = "Builder module for the RIMS-Code website scheme database."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.4",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[project.scripts]
website = "rimscode_website:website"

[project.optional-dependencies]
build = [
    "pytablewriter>=1.2.0",
    "numpy>=1.26.4",
    "pint>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.14",
    "pytest>=7.4.4",
    "pytest-mock>=3.12.0",
    "rttools @ git+https://github.com/trappitsch/rttools",
    "rimsschemedrawer @ git+https://github.com/RIMS-Code/RIMSSchemeDrawer",
]

[tool.rye.scripts]
build = "python -m rimscode_website.create_website"
rebuild = "python -c 'from rimscode_website import create_website; create_website.website_recreate()'"
serve = "mkdocs serve"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rimscode_website"]
